@@ -9,4 +9,5 @@ static char * x_xpm[] = {
 "   ..   ",
 "  ....  ",
 " ..  .. ",
+"        ",
 "        ",};
